# libcamera

./: .clang-format  Android.bp  SCR.txt  android-build.sh  android-config.sh  android-install.sh  android-meson.cross  android-reconfig.sh  auto_update.sh  check-build.sh  meson.build  meson_options.txt
Documentation/: environment_variables.rst
include/android/: meson.build
include/libcamera/: camera.h  stream.h
include/libcamera/base/: class.h
include/libcamera/internal/: framebuffer.h  ipc_pipe_unixsocket.h  v4l2_subdevice.h  v4l2_videodevice.h
include/libcamera/ipa/: meson.build  nxpneo.mojom
prebuilt-android/include/libcamera/: control_ids.h  formats.h  libcamera.h  property_ids.h  version.h
prebuilt-android/include/libcamera/internal/: tracepoints.h
prebuilt-android/include/libcamera/ipa/: core_ipa_interface.h  core_ipa_serializer.h  nxpneo_ipa_interface.h  nxpneo_ipa_proxy.h  nxpneo_ipa_serializer.h
prebuilt-android/src/ipa/nxp/neo/: ipa_nxp_neo.so.sign
prebuilt-android/src/libcamera/: controls_ids.cpp  ipa_pub_key.cpp  properties_ids.cpp  property_ids.cpp  version.cpp
prebuilt-android/src/libcamera/proxy/: nxpneo_ipa_proxy.cpp
prebuilt-android/src/libcamera/proxy/worker/: nxpneo_ipa_proxy  nxpneo_ipa_proxy_worker.cpp
src/android/: camera_capabilities.cpp  camera_capabilities.h  camera_device.cpp  camera_metadata.cpp  camera_request.cpp  camera_stream.cpp  camera_stream.h  meson.build
src/android/data/ap130x/: camera_hal.yaml
src/android/jpeg/: encoder_libjpeg.cpp  post_processor_jpeg.cpp  thumbnailer.cpp
src/android/metadata/: camera_metadata.c
src/android/mm/: generic_camera_buffer.cpp  generic_frame_buffer_allocator.cpp
src/android/yuv/: post_processor_yuv.cpp
src/gstreamer/: gstlibcamera-utils.cpp  gstlibcamerapad.cpp  gstlibcamerasrc.cpp
src/ipa/libipa/: exposure_mode_helper.cpp
src/ipa/nxp/: meson.build
src/ipa/nxp/cam_helper/: camera_helper.cpp  camera_helper.h  camera_helper_mx95mbcam.cpp  camera_helper_os08a20.cpp  camera_helper_ov5640.cpp  camera_helper_ox05b1s.cpp  md_parser_ox.cpp  md_parser_ox.h  meson.build
src/ipa/nxp/neo/: ipa_context.cpp  ipa_context.h  meson.build  module.h  neo_ipa.cpp  nxp-neoisp-enums.h
src/ipa/nxp/neo/algorithms/: agc.cpp  agc.h  algorithm.h  awb.cpp  awb.h  drc.cpp  drc.h  hdr_decomp.cpp  hdr_decomp.h  meson.build  rgbir.cpp  rgbir.h
src/ipa/nxp/neo/data/: meson.build  mx95mbcam.yaml  os08a20.yaml  ov5640.yaml  ox05b1s.yaml
src/libcamera/: Android.bp  camera.cpp  camera_manager.cpp  camera_sensor.cpp  camera_sensor_properties.cpp  controls.cpp  device_enumerator_sysfs.cpp  framebuffer.cpp  include  ipa_manager.cpp  ipa_module.cpp  ipc_pipe_unixsocket.cpp  media_device.cpp  meson.build  pipeline_handler.cpp  request.cpp  stream.cpp  v4l2_subdevice.cpp  v4l2_videodevice.cpp
src/libcamera/base/: Android.bp  include  log.cpp  meson.build  shared_fd.cpp
src/libcamera/pipeline/imx8-isi/: imx8-isi.cpp
src/libcamera/pipeline/nxp/: meson.build
src/libcamera/pipeline/nxp/neo/: frames.cpp  frames.h  isi_device.cpp  isi_device.h  meson.build  neo_device.cpp  neo_device.h  neo_pipeline.cpp  neo_utils.cpp  neo_utils.h
src/libcamera/pipeline/nxp/neo/data/: config.yaml  meson.build
src/libcamera/sensor/: camera_sensor.cpp  camera_sensor_properties.cpp
test/: camera-sensor.cpp  threads.cpp
test/camera/: Android.bp  capture.cpp
test/libtest/: Android.bp
